[gd_scene load_steps=25 format=2]

[ext_resource path="res://images/ui/textbox.png" type="Texture" id=1]
[ext_resource path="res://scripts/message_box.gd" type="Script" id=2]
[ext_resource path="res://images/ui/arrow.png" type="Texture" id=4]
[ext_resource path="res://audio/sfx/shutter.wav" type="AudioStream" id=5]
[ext_resource path="res://images/ui/nameplate.png" type="Texture" id=6]
[ext_resource path="res://shaders/hue_shift.shader" type="Shader" id=8]
[ext_resource path="res://components/text_theme.tres" type="Theme" id=9]

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 256, 256 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 0, 256, 256, 256 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 0, 512, 256, 256 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 0, 768, 256, 256 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 0, 1024, 256, 256 )

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 256, 0, 256, 256 )

[sub_resource type="AtlasTexture" id=11]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 256, 256, 256, 256 )

[sub_resource type="AtlasTexture" id=12]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 256, 512, 256, 256 )

[sub_resource type="AtlasTexture" id=13]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 256, 768, 256, 256 )

[sub_resource type="AtlasTexture" id=14]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 256, 1024, 256, 256 )

[sub_resource type="AtlasTexture" id=15]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 512, 0, 256, 256 )

[sub_resource type="AtlasTexture" id=16]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 512, 256, 256, 256 )

[sub_resource type="AtlasTexture" id=17]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 512, 512, 256, 256 )

[sub_resource type="AtlasTexture" id=18]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 512, 768, 256, 256 )

[sub_resource type="AtlasTexture" id=19]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 512, 1024, 256, 256 )

[sub_resource type="SpriteFrames" id=20]
animations = [ {
"frames": [ SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ) ],
"loop": true,
"name": "default",
"speed": 10.0
} ]

[sub_resource type="ShaderMaterial" id=2]
shader = ExtResource( 8 )
shader_param/shift_amount = 0.0

[node name="MessageBox" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="Background" type="TextureRect" parent="."]
self_modulate = Color( 1, 1, 1, 0.784314 )
anchor_top = 1.0
anchor_bottom = 1.0
mouse_filter = 0
mouse_default_cursor_shape = 2
texture = ExtResource( 1 )

[node name="NextCaret" type="Control" parent="Background"]
anchor_left = 0.9
anchor_top = 0.7
anchor_right = 0.9
anchor_bottom = 0.7
mouse_filter = 1

[node name="NextCaret" type="AnimatedSprite" parent="Background/NextCaret"]
scale = Vector2( 0.186289, 0.186289 )
frames = SubResource( 20 )
frame = 6
playing = true
__meta__ = {
"_edit_lock_": true
}

[node name="Nameplate" type="TextureRect" parent="Background"]
visible = false
self_modulate = Color( 1, 1, 1, 0.784314 )
material = SubResource( 2 )
grow_vertical = 0
texture = ExtResource( 6 )

[node name="NameText" type="RichTextLabel" parent="Background/Nameplate"]
margin_left = 235.025
margin_top = 5.0
margin_right = 426.025
margin_bottom = 57.0
mouse_filter = 2
theme = ExtResource( 9 )
bbcode_enabled = true
meta_underlined = false
scroll_active = false

[node name="Message" type="RichTextLabel" parent="Background"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -704.5
margin_top = -91.0
margin_right = 704.5
margin_bottom = 91.0
mouse_filter = 2
theme = ExtResource( 9 )
bbcode_enabled = true
meta_underlined = false
scroll_active = false

[node name="Tween" type="Tween" parent="."]

[node name="MessageTickTimer" type="Timer" parent="."]

[node name="ClickSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[connection signal="gui_input" from="Background" to="." method="_on_click"]
[connection signal="mouse_entered" from="Background" to="." method="_on_hover"]
[connection signal="mouse_exited" from="Background" to="." method="_on_blur"]
[connection signal="tween_all_completed" from="Tween" to="." method="_on_tween_all_completed"]
[connection signal="tween_completed" from="Tween" to="." method="_on_tween_completed"]
[connection signal="tween_started" from="Tween" to="." method="_on_tween_started"]
[connection signal="timeout" from="MessageTickTimer" to="." method="_type_text_character"]
